--- a/style.css
+++ b/style.css
@@ -132,9 +132,9 @@ font-weight:bold;
 padding:5%;
 }
 
-.smallpage-bg1 {
+.smallpage-bg{
     width: 100%;
-background: url("images/page_header_bg.jpg") no-repeat center center;
+background: url("images/page_header_bg.jpg") center center;
 background-size: cover;/*make the background image cover the whole div proportionally*/
 height: 40vh; /*Viewport Height (vh) — This unit is based on the height of the viewport. A value of 1vh is equal to 1% of the viewport height. */
 }
