--- a/responsive.css
+++ b/responsive.css
@@ -63,4 +63,10 @@
         display: flex;
         justify-content: flex-end;
     }
+    .menu-item
+      {
+          display: flex;
+          justify-content: right;
+        }
+
 }
